# alemai

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  seed.py
backend/app/api/: __init__.py  admin.py  alerts.py  anomalies.py  auth.py  city.py  contracts.py  copilot.py  deps.py  documents.py  events.py  exports.py  forecasts.py  imports.py  metrics.py  objections.py  ops.py  radar.py  reconcile.py  regs.py  reports.py  risks.py  rules.py  share.py
backend/app/models/: __init__.py  alerts.py  analytics.py  claim.py  contract.py  enums.py  events.py  imports.py  org.py  people.py  reference.py  rules.py  users.py
backend/app/schemas/: __init__.py  admin.py  alerts.py  anomalies.py  auth.py  city.py  (+17 more)
backend/migrations/: env.py
backend/regs/: pravila_monitoringa.kk.txt  pravila_monitoringa.ru.txt  pravila_oplaty.kk.txt  pravila_zakupa.kk.txt  zakon_206_viii.kk.txt
backend/rules/: catalog.yaml  example.yaml
backend/scripts/: assert_seed_integrity.py  assert_storylines.py  gen_qa_checklist.py  validate_eval_set.py  validate_glossary.py  validate_rule_cases.py  validate_rules.py  validate_ui_strings.py  verify_xlsx_exports.py
backend/tests/: test_auth_integration.py  test_deploy_config.py  test_events_integration.py  test_imports_integration.py  test_line_key.py  test_metrics_integration.py  test_ops_integration.py  test_radar.py  test_radar_integration.py  test_rules_golden.py  test_smoke.py
(+185 files in other folders)
